working on the detail page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.0.0
   flutter_search_bar: ^2.1.0
+  toast: ^0.1.5
+
 
 dev_dependencies:
   flutter_test:
